[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="LinkButton1" type="LinkButton" parent="."]
margin_left = 56.8371
margin_top = 25.4736
margin_right = 181.837
margin_bottom = 39.4736
rect_pivot_offset = Vector2( 859.304, -142.526 )
text = "https://easings.net/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton2" type="LinkButton" parent="."]
margin_left = 57.2455
margin_top = 48.2659
margin_right = 436.246
margin_bottom = 62.2659
text = "http://tweenjs.github.io/tween.js/examples/03_graphs.html"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
margin_left = 40.7126
margin_top = 264.298
margin_right = 140.713
margin_bottom = 278.298
rect_pivot_offset = Vector2( 50, 7 )
text = "Sprite 1 - Hover
Tween.TRANS_QUAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( 88.8962, 219.53 )
texture = ExtResource( 1 )

[node name="Tween1" type="Tween" parent="."]

[node name="Label2" type="Label" parent="."]
margin_left = 196.552
margin_top = 265.334
margin_right = 296.552
margin_bottom = 279.334
rect_pivot_offset = Vector2( 50, 7 )
text = "Sprite 2 - Bounce
Tween.TRANS_CUBIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 246.278, 219.581 )
texture = ExtResource( 1 )

[node name="Tween2" type="Tween" parent="."]

[connection signal="pressed" from="LinkButton1" to="." method="_on_LinkButton1_pressed"]
[connection signal="pressed" from="LinkButton2" to="." method="_on_LinkButton2_pressed"]
[connection signal="tween_completed" from="Tween1" to="." method="_on_Tween1_tween_completed"]
[connection signal="tween_completed" from="Tween2" to="." method="_on_Tween2_tween_completed"]
